# SG-Gruppe-3-Kun

./: .gitignore  5236_438085554_1.md  AI-research.md  README.md  data_processor.py  errormessage  payload.json  prompt.md  proposal.md  requirements.txt
backend/: README.md  ingest_docs.py  inspect_result.py  parsed_soup.html  pyproject.toml  raw_response_text.html  start.sh  test_schema_repro.py
backend/app/: main.py
backend/app/api/v1/endpoints/: chat.py  feedback.py  health.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/db/: models.py  session.py
backend/app/middleware/: correlation_id.py  rate_limit.py
backend/app/rag/: ingestion.py  vector_store.py
backend/app/schemas/: __init__.py  chat.py  feedback.py  rag.py
backend/app/services/: chat_service.py
backend/chroma_data/: chroma.sqlite3
backend/test_chroma_data/: chroma.sqlite3
backend/tests/: conftest.py  test_chroma_init.py  test_logging.py  test_main.py  test_rate_limit.py
backend/tests/api/: test_chat_api.py
backend/tests/api/v1/: test_feedback_api.py
backend/tests/api/v1/endpoints/: test_health.py
backend/tests/db/: test_models.py
backend/tests/rag/: test_ingestion.py
backend/tests/services/: test_chat_service.py
docs/: PRD.md  architecture.md  backlog.md  bmm-workflow-status.md  bmm-workflow-status.yaml  brainstorming-reflection-report.md  epics.md  frontend-technology-research.md  implementation-readiness-report-Sunday, 7 December 2025.md  pm_greeting_and_menu.md  pm_improvements_applied.md  pm_rerun_validation_prompt.md  pm_revalidation_summary.md  pm_validation_query.md  pm_validation_summary.md  pm_workflow_status_updated.md  product-brief-HMSREG-Documentation-Chatbot-Saturday, 15 November 2025.md  product-brief-ibe160-2025-10-26.md  product-brief-ibe160-Saturday, 15 November 2025.md  project-plan.md  proposal-changelog.md  reflection-report-UX-Design-Session-Monday, 17 November 2025.md  reflection-report-draft.md  reflection-report-template-oliver.md  reflection-report-template.md  reflection-report-v1  reflection-report-v1.md  reflection-report.md  report-architecture.md  report-epics.md  report-implementation.md  requirements.md  research-session-prompts.md  research-technical-Wednesday, 12 November 2025.md  session-report-20251117.md  (+3 more)
(+218 files in other folders)
